--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="step-badge" aria-hidden="true">1</div>
         <h2 class="step-title" data-i18n="step1_title">Step 1: Get the app file</h2>
         <p class="step-desc" data-i18n="step1_desc">Tap the green button below. This will start downloading the app to your tablet.</p>
-        <a href="http://re.rawabimarket.com/app-release.apk" class="btn-download" download>
+        <a href="/api/download" class="btn-download" download="app-release.apk">
           <span data-i18n="step1_btn">CLICK THE DOWNLOAD BUTTON</span>
         </a>
         <p class="step-note" data-i18n="step1_note">After you tap, go to Step 2 below.</p>
